--- a/templates/ods/ods-06/ods-06-legislativa.html
+++ b/templates/ods/ods-06/ods-06-legislativa.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="../../../static/css/ods.css">
     <!-- end of Bootstrap CDN -->
     <link rel="stylesheet" href="../../../static/css/accordion.css">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
 </head>
-<body>
+<body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
     <div class="panel-title title-div">
 
@@ -34,9 +40,10 @@
           <div class="container">
             <h1 class="ods-title">Función Legislativa ODS 6</h1>
             <br>
-            <p class="lead text-white">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+            <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
             <p>
               <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
+              <a href="ods-06-control.html" class="btn btn-primary my-2">Función Control</a>
               <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-primary my-2">Más info</a>
             </p>
           </div>
@@ -54,7 +61,7 @@
               <div class="accordion">
                 <details>
                   <summary><b class="text-white">PACTO</b></summary>
-                  <hr style="background: #FFFFFF; height: 3px;">
+                  <hr style="background: #FFFFFF; height: 1px;">
                   <details>
                     <summary><b>
                                   El Parlamento velará por que el Plan Director del Ciclo Integral del Agua de Uso Urbano se desarrolle de 
@@ -70,19 +77,16 @@
                       <details>
                         <summary><b>Potabilidad del agua de consumo</b></summary>
                         <hr style="background: #FFFFFF; height: 3px;">
-                        <details>
-                            <summary>
-                              <p>&#10095;Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.</p>
-                              <p>&#10095;
-                                <a class="text-primary" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
+                                                
+                              <p>Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.</p>
+                              <p>
+                                <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
                                   Indicador número 5 de segumiento del Plan Integral de Gestión de Agua de uso Urbano (NILSA)
                                 </a>
                               </p>
-                              <p>&#10095;Anual</p>
-                              <p>&#10095;Pregunta parlamentaria o petición de información.</p>
-                              <p>&#10095;7,70 %</p>
-                            </summary>
-                          </details>
+                              <p>Anual</p>
+                              <p>Pregunta parlamentaria o petición de información.</p>
+                              <p>7,70 %</p>
                         </details>
                     </details>
                   </details>
@@ -91,10 +95,13 @@
               <!-- End of accordion -->
             </div>      
             <div class="col">
-                <img class="rounded img-fluid" src="../../../static/img/ejemplo_grafico.png">
+                <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
             </div>
         </div>
     </div>
+
+
+    <div class="panel-footer"></div>
 
     <!-- end of content -->
     
