--- a/templates/test/accordion1.html
+++ b/templates/test/accordion1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="accordion1.css">
 </head>
 <body>
-    <button class="accordion">PACTO</button>
+    <p class="accordion underline">PACTO</p>
     <div class="panel">
       <!-- sub -->
       <button class="accordion">
@@ -18,14 +18,16 @@
       </button>
       <div class="panel">
         <!-- sub -->
-        <button class="accordion">INDICADOR 1</button>
+        <p class="accordion">INDICADOR 1</p>
         <div class="panel">
           <p>Lorem ipsum...</p>
         </div> 
+        <br>
         <button class="accordion">INDICADOR 2</button>
         <div class="panel">
           <p>Lorem ipsum...</p>
-        </div> 
+        </div>
+        <br> 
         <button class="accordion">INDICADOR 3</button>
         <div class="panel">
           <p>Lorem ipsum...</p>
