--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -3,107 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODS.1</title>
+    <title>ODS 6 Control</title>
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
             rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
             crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../static/css/base.css">
+    <link rel="stylesheet" href="../../../static/css/ods.css">
     <!-- end of Bootstrap CDN -->
+    <link rel="stylesheet" href="../../../static/css/accordion.css">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
 </head>
-<body>
-    <!-- Content -->
+<body class="animate__animated animate__fadeInRight">
+    <!-- Content -->    
+    <div class="panel-title title-div">
+
+         <!-- Navigation menu bar -->
+        <nav class="navbar">
+            <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+            <div class="nav-menu">
+                <a href="#" class="text-right p-2 hover-underline-animation">ODS</a>
+                <a href="#" class="text-right p-2 hover-underline-animation">EQUIPO</a>
+                <a href="#" class="text-right p-2 hover-underline-animation">CONTACTO</a> 
+            </div>
+        </nav>
+        <!-- end of navigation menu bar -->
     
-    <div class="container">
-        <h1>Funciones ODS 1</h1>
+      <br>
+      <br>
+      <section class="jumbotron text-center">
+          <div class="container">
+            <h1 class="ods-title">Función Control ODS 6</h1>
+            <br>
+            <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
+            <p>
+              <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
+              <a href="ods-06-legislativa.html" class="btn btn-primary my-2">Función Legislativa</a>
+              <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-primary my-2">Más info</a>
+            </p>
+          </div>
+        </section>
         <br>
         <br>
-        <br>
+    </div>
+
+    <br>
+
+    <div class="box">
         <div class="row">
             <div class="col">
+              <!-- Accordion -->
+              <div class="accordion">
+                <details>
+                  <summary><b class="text-white">PACTO</b></summary>
+                  <hr style="background-color: #FFFFFF; height: 2px;">
+                  <!-- Pacto 1 -->
+                  <details>
+                    <summary>
+                      <strong>
+                        El Parlamento velará porque se amplíe la cooperación internacional en base al Acuerdo Programático 
+                        aprobado por el Gobierno de Navarra, solicitando información del impacto generado a través de los 
+                        instrumentos recogidos en el III Plan Director de Cooperación Navarra que se 
+                        ejecutan en países priorizados por el mismo, y que se dirigen a promover el acceso universal y 
+                        equitativo del agua potable y saneamiento.              
+                      </strong>
+                    </summary>
+                    <hr style="background: #FFFFFF; height: 3px;">
+                    <details>
+                      <summary><strong class="text-white">INDICADORES</strong></summary>
+                      <hr style="background: #FFFFFF; height: 3px;">
+                      <details>
+                        <summary><b>Potabilidad del agua de consumo</b></summary>
+                        <hr style="background: #FFFFFF; height: 3px;">
+                                                
+                              <p>Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.</p>
+                              <p>
+                                <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
+                                  Indicador número 5 de segumiento del Plan Integral de Gestión de Agua de uso Urbano (NILSA)
+                                </a>
+                              </p>
+                              <p>Anual</p>
+                              <p>Pregunta parlamentaria o petición de información.</p>
+                              <p>7,70 %</p>
+                        </details>
+                    </details>
+                  </details>
 
-                <div class="accordion" id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                          Legislativa
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                        <div class="accordion-body">
-                            <div class="accordion" id="accordionPanelsStayOpenExample">
-                                <div class="accordion-item">
-                                  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                      Legislativaa
-                                    </button>
-                                  </h2>
-                                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                                    <div class="accordion-body">
-                                      collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="accordion-item">
-                                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                                      Control
-                                    </button>
-                                  </h2>
-                                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                                    <div class="accordion-body">
-                                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="accordion-item">
-                                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                                      Económica
-                                    </button>
-                                  </h2>
-                                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                                    <div class="accordion-body">
-                                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          Control
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                        <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          Económica
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                        <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <hr style="background-color: #FFFFFF; height: 2px;">
+                <!-- Pacto 2 -->
 
-            </div>
+                <details>
+                  <summary>
+                    <strong>
+                      El Parlamento impulsará y apoyará campañas públicas de difusión de los valores de la Nueva Cultura del Agua. 
+                    </strong>
+                  </summary>
+                  <hr style="background: #FFFFFF; height: 3px;">
+                  <details>
+                    <summary><strong class="text-white">INDICADORES</strong></summary>
+                    <hr style="background: #FFFFFF; height: 3px;">
+                    <details>
+                      <summary>
+                        <strong>
+                          Cooperación internacional en agua consumo y depuración.
+                        </strong>
+                      </summary>
+                      <hr style="background: #FFFFFF; height: 3px;">
+                                              
+                            <p>Gasto en cooperación al desarrollo en abastecimiento y saneamiento.</p>
+                            <p>0/1/2</p>
+                            Informe de seguimiento y evaluación de Plan director del agua de uso urbano (Indicador 14)
+
+                            <p>
+                              <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
+                                Informe de seguimiento y evaluación de Plan director del agua de uso urbano (Indicador 14)
+                              </a>
+                            </p>
+                            <p>Anual</p>
+                            <p>Pregunta parlamentaria o petición de información.</p>
+                            <p>Línea de Base: 0</p>
+                            <p>Meta 2030: 2</p>
+                            <p>Grupos parlamentarios</p>
+                      </details>
+                  </details>
+                </details>
+
+                <hr style="background-color: #FFFFFF; height: 2px;">
+                <!-- Pacto 3 -->
+
+                <details>
+                  <summary>
+                    <strong>
+                      El Parlamento incentivará tanto a instituciones privadas como públicas el uso eficiente del agua como bien público natural y esencial.
+                    </strong>
+                  </summary>
+                  <p>This generator doesn't include most common questions. The thought is that you can come up with common questions on your own so most of the questions in this generator are questions that elicit a bit more information that a typical common question.</p>
+                </details>
+                </details>
+              </div>
+              <!-- End of accordion -->
+            </div>      
             <div class="col">
-                <h2>Mi verga guey</h2>
+                <img class="rounded img-fluid animate__animated animate__fadeInRight" src="../../../static/img/ejemplo_grafico.png">
             </div>
         </div>
-
     </div>
+
+
+    <div class="panel-footer"></div>
 
     <!-- end of content -->
     
@@ -111,6 +163,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
             crossorigin="anonymous"></script>
-    <!-- end of Bootstrap JS -->
+    <!-- Accordion JS -->
+    <script src="../../../static/js/accordion.js"></script>
+    <!--  -->
 </body>
 </html>
