Fix ods6 blue color

--- a/templates/ods/ods-06/ods-06-legislativa.html
+++ b/templates/ods/ods-06/ods-06-legislativa.html
@@ -21,7 +21,7 @@
 </head>
 <body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
-    <div class="panel-title title-div">
+    <div class="panel-title title-div ods-6">
 
          <!-- Navigation menu bar -->
         <nav class="navbar">
@@ -38,13 +38,14 @@
       <br>
       <section class="jumbotron text-center">
           <div class="container">
-            <h1 class="ods-title">Función Legislativa ODS 6</h1>
+            <h1 class="ods-title">ODS 6</h1>
+            <h1 class="ods-title">Agua limpia y saneamiento</h1>            
             <br>
             <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
             <p>
               <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
-              <a href="ods-06-control.html" class="btn btn-primary my-2">Función Control</a>
-              <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-primary my-2">Más info</a>
+              <a href="ods-06-control.html" class="btn btn-success my-2">Función Control</a>
+              <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-success my-2">Más info</a>
             </p>
           </div>
         </section>
