--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -21,7 +21,7 @@
 </head>
 <body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
-    <div class="panel-title title-div">
+    <div class="panel-title title-div ods-6">
 
          <!-- Navigation menu bar -->
         <nav class="navbar">
@@ -38,7 +38,8 @@
       <br>
       <section class="jumbotron text-center">
           <div class="container">
-            <h1 class="ods-title">Función Control ODS 6</h1>
+            <h1 class="ods-title">ODS 6</h1>
+            <h1 class="ods-title">Agua limpia y saneamiento</h1>
             <br>
             <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
             <p>
