--- a/templates/ods/ods-06/ods-06-legislativa.html
+++ b/templates/ods/ods-06/ods-06-legislativa.html
@@ -87,7 +87,7 @@
                               </p>
                               <p>Anual</p>
                               <p>Pregunta parlamentaria o petición de información.</p>
-                              <p>7,70 %</p>
+                              <p><strong>Línea de base: </strong>7,70 %</p>
                         </details>
                     </details>
                   </details>
