Legislativa ods 1 accordion

--- a/templates/ods/base.html
+++ b/templates/ods/base.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODS.1</title>
+    <title>ODS 1 Legislativa</title>
+    <link rel="icon" type="image/png" href="../../../../../static/img/logo_ods_1.png"/>
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
             rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -18,28 +20,32 @@
     <div class="panel-title title-div">
 
          <!-- Navigation menu bar -->
-        <nav class="navbar">
-            <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
-            <div class="nav-menu">
-                <a href="#" class="text-right p-2 hover-underline-animation">ODS</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">EQUIPO</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">CONTACTO</a> 
-            </div>
-        </nav>
+         <nav class="navbar">
+          <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <div class="nav-menu">
+              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
+              <a href="../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+              <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+          </div>
+      </nav>
         <!-- end of navigation menu bar -->
     
       <br>
       <br>
       <section class="jumbotron text-center">
-          <div class="container">
-            <h1 class="ods-title">Función Legislativa ODS 6</h1>
-            <!-- <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-            <p>
-              <a href="#" class="btn btn-primary my-2">Main call to action</a>
-              <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-            </p> -->
-          </div>
-        </section>
+        <div class="container">
+          <h1 class="ods-title">ODS 1</h1>
+          <h1 class="ods-title">Fin de la pobreza</h1>            
+          <br>
+          <p class="lead text-white">Poner fin a la pobreza en todas sus formas en todo el mundo</p>
+          <p>
+            <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
+            <a href="ods-01-control.html" class="btn btn-success my-2">Control</a>
+            <a href="ods-01-economica.html" class="btn btn-success my-2">Económica</a>
+            <a href="https://www.un.org/sustainabledevelopment/es/poverty/" target="_blank" class="btn btn-success my-2">Más info</a>
+          </p>
+        </div>
+      </section>
         <br>
         <br>
     </div>
@@ -62,6 +68,8 @@
 
     <!-- end of content -->
     
+    <div class="panel-footer"></div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
