Legislativa ods 1 accordion + missing ones

--- a/templates/ods/ods-01/ods-01-control.html
+++ b/templates/ods/ods-01/ods-01-control.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODS 1 Legislativa</title>
+    <title>ODS 1 Control</title>
     <link rel="icon" type="image/png" href="../../../../../static/img/logo_ods_1.png"/>
 
     <!-- Bootstrap CDN -->
@@ -34,13 +34,13 @@
       <br>
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="ods-title">ODS 1 - Legislativa</h1>
-          <h1 class="ods-title">Fin de la pobreza</h1>                      
+          <h1 class="ods-title">ODS 1 - Control</h1>
+          <h1 class="ods-title">Fin de la pobreza</h1>            
           <br>
           <p class="lead text-white">Poner fin a la pobreza en todas sus formas en todo el mundo</p>
           <p>
             <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
-            <a href="ods-01-control.html" class="btn btn-primary my-2">Control</a>
+            <a href="ods-01-legislativa.html" class="btn btn-primary my-2">Legislativa</a>
             <a href="ods-01-economica.html" class="btn btn-primary my-2">Económica</a>
             <a href="https://www.un.org/sustainabledevelopment/es/poverty/" target="_blank" class="btn btn-primary my-2">Más info</a>
           </p>
@@ -79,64 +79,6 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Informe técnico de impacto en pobreza y desigualdad que deberá 
-                      acompañar a todos los proyectos de Ley de Gobierno de Navarra.</strong>
-                    </summary>
-                    <hr style="background: #FFFFFF; height: 3px;">
-                      <p><strong class="underline">Descripción</strong>: 
-                        Elaboración y aprobación por parte del Parlamento del informe técnico de impacto en pobreza.
-                        0/1/2
-                      </p>
-                      <p><strong class="underline">Fuentes de origen</strong>: Informe técnico.</p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 2</p>
-                      <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
-                    </details>
-                    <hr style="background: #FFFFFF; height: 6px;">
-                    <!-- Indicador 2 -->
-                    <details>
-                      <summary><strong>Intergrupo de pobreza.</strong></summary>
-                      <hr style="background: #FFFFFF; height: 3px;">
-                        <p><strong class="underline">Descripción</strong>: 
-                          Constitución de un intergrupo parlamentario de pobreza.
-                          0/1/2
-                        </p>
-                        <p><strong class="underline">Fuentes de origen</strong>: Entidades sociales y Gobierno de Navarra.</p>
-                        <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
-                        <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
-                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                        <p><strong class="underline">Meta 2030</strong>: 2</p>
-                        <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
-                    </details>
-                    <hr style="background: #FFFFFF; height: 6px;">
-                    <!-- Indicador 3 -->
-                    <details>
-                      <summary><strong>Sistema de indicadores de medición de la evolución de la pobreza y la exclusión social.</strong></summary>
-                      <hr style="background: #FFFFFF; height: 3px;">
-                        <p><strong class="underline">Descripción</strong>: 
-                          Establecimiento de un sistema de indicadores periódicos para el seguimiento anual de evolución de la 
-                          pobreza y la exclusión social que incorpore indicadores de desigualdad multidimensionales: 
-                          El conjunto de departamentos de Gobierno de Navarra incorporá en sus estadisticas la variable de 
-                          ingresos económicos para conocer el impacto de sus acciones (programas, prestaciones) en la desigualdad. 
-                          A tal efecto, el departamento de hacienda establecerá un tramo 0 de ingresos en las estadísitcas de renta equivalente 
-                          a la cuantía anual de RG para una persona sola y lo incorporará al resto de tramos de renta. Está información podrá 
-                          ser cruzada con información clave del resto de Departamentos: 
-                          empleo (desempleo, temporalidad, desempleo total familiar, formación); Vivienda (tipología ETHOS); 
-                          Salud (enfermedades físicas, salud mental, adicciones, hábitos de vida); Educación (absentismo, abandono temprano, fracaso), 
-                          Derechos Sociales (programas de menores, atención dependencia, y otros). 0/1/2
-                        </p>
-                        <p><strong class="underline">Fuentes de origen</strong>: Departamentos del Gobierno de Navarra.</p>
-                        <p><Strong class="underline">Periodicidad</Strong>: Única.</p>
-                        <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
-                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                        <p><strong class="underline">Meta 2030</strong>: 2</p>
-                        <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
-                      </details>
-                  <hr style="background: #FFFFFF; height: 6px;">
-                  <!-- Indicador 4 -->
-                  <details>
                     <summary><strong>Plan de Inclusión</strong></summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
@@ -152,7 +94,7 @@
                       <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
-                    <!-- Indicador 5 -->
+                    <!-- Indicador 2 -->
                     <details>
                         <summary><strong>Comparecencia de Presidente/a de Gobierno de Navarra sobre el estado de la pobreza y la desigualdad en la comunidad foral.</strong></summary>
                         <hr style="background: #FFFFFF; height: 3px;">
