--- a/templates/ods/ods-03/ods-03-economica.html
+++ b/templates/ods/ods-03/ods-03-economica.html
@@ -14,8 +14,13 @@
     <link rel="stylesheet" href="../../../static/css/ods.css">
     <!-- end of Bootstrap CDN -->
     <link rel="stylesheet" href="../../../static/css/accordion.css">
+    <!-- Animate css -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
 </head>
-<body>
+<body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
     <div class="panel-title title-div">
 
@@ -24,7 +29,7 @@
           <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
           <div class="nav-menu">
               <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
-              <a href="../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
               <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
           </div>
       </nav>
