--- a/templates/ods/ods-03/ods-03-legislativa.html
+++ b/templates/ods/ods-03/ods-03-legislativa.html
@@ -24,7 +24,7 @@
           <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
           <div class="nav-menu">
               <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
-              <a href="../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
               <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
           </div>
       </nav>
