--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -21,17 +21,17 @@
 </head>
 <body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
-    <div class="panel-title title-div ods-6">
+    <div class="panel-title title-div">
 
          <!-- Navigation menu bar -->
-        <nav class="navbar">
-            <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
-            <div class="nav-menu">
-                <a href="#" class="text-right p-2 hover-underline-animation">ODS</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">EQUIPO</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">CONTACTO</a> 
-            </div>
-        </nav>
+         <nav class="navbar">
+          <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <div class="nav-menu">
+              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+              <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+          </div>
+      </nav>
         <!-- end of navigation menu bar -->
     
       <br>
@@ -77,20 +77,25 @@
                     <hr style="background: #FFFFFF; height: 3px;">
                     <details>
                       <summary><strong class="text-white">INDICADORES</strong></summary>
-                      <hr style="background: #FFFFFF; height: 3px;">
+                      <hr style="background: #FFFFFF; height: 6px;">
+                      <!-- Indicador 1 -->
                       <details>
-                        <summary><b>Potabilidad del agua de consumo</b></summary>
+                        <summary><strong>Cooperación internacional en agua consumo y depuración.</strong>
+                        </summary>
                         <hr style="background: #FFFFFF; height: 3px;">
-                                                
-                              <p>Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.</p>
-                              <p>
-                                <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
-                                  Indicador número 5 de segumiento del Plan Integral de Gestión de Agua de uso Urbano (NILSA)
-                                </a>
-                              </p>
-                              <p>Anual</p>
-                              <p>Pregunta parlamentaria o petición de información.</p>
-                              <p>7,70 %</p>
+                          <p><strong class="underline">Descripción</strong>: 
+                            Gasto en cooperación al desarrollo en abastecimiento y saneamiento.0/1/2
+                        </p>
+                          <p><strong class="underline">Fuentes de origen</strong>: 
+                            <a href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/" class="text-white underline" target="_blank">
+                              https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/
+                            </a>    
+                        </p>
+                          <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                          <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                          <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                          <p><strong class="underline">Meta 2030</strong>: 2</p>
+                          <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                         </details>
                     </details>
                   </details>
@@ -107,29 +112,25 @@
                   <hr style="background: #FFFFFF; height: 3px;">
                   <details>
                     <summary><strong class="text-white">INDICADORES</strong></summary>
-                    <hr style="background: #FFFFFF; height: 3px;">
+                    <hr style="background: #FFFFFF; height: 6px;">
+                    <!-- Indicador 1 -->
                     <details>
-                      <summary>
-                        <strong>
-                          Cooperación internacional en agua consumo y depuración.
-                        </strong>
+                      <summary><strong>Sensibilización y divulgación cultura del agua.</strong>
                       </summary>
                       <hr style="background: #FFFFFF; height: 3px;">
-                                              
-                            <p>Gasto en cooperación al desarrollo en abastecimiento y saneamiento.</p>
-                            <p>0/1/2</p>
-                            Informe de seguimiento y evaluación de Plan director del agua de uso urbano (Indicador 14)
-
-                            <p>
-                              <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
-                                Informe de seguimiento y evaluación de Plan director del agua de uso urbano (Indicador 14)
-                              </a>
-                            </p>
-                            <p>Anual</p>
-                            <p>Pregunta parlamentaria o petición de información.</p>
-                            <p>Línea de Base: 0</p>
-                            <p>Meta 2030: 2</p>
-                            <p>Grupos parlamentarios</p>
+                        <p><strong class="underline">Descripción</strong>: 
+                          Gasto en educación y sensibilización.0/1/2
+                      </p>
+                        <p><strong class="underline">Fuentes de origen</strong>: 
+                          <a href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/" class="text-white underline" target="_blank">
+                            https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/
+                          </a>    
+                      </p>
+                        <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                        <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                        <p><strong class="underline">Meta 2030</strong>: 2</p>
+                        <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                       </details>
                   </details>
                 </details>
@@ -143,7 +144,29 @@
                       El Parlamento incentivará tanto a instituciones privadas como públicas el uso eficiente del agua como bien público natural y esencial.
                     </strong>
                   </summary>
-                  <p>This generator doesn't include most common questions. The thought is that you can come up with common questions on your own so most of the questions in this generator are questions that elicit a bit more information that a typical common question.</p>
+                  <hr style="background: #FFFFFF; height: 3px;">
+                  <details>
+                    <summary><strong class="text-white">INDICADORES</strong></summary>
+                    <hr style="background: #FFFFFF; height: 6px;">
+                    <!-- Indicador 1 -->
+                    <details>
+                      <summary><strong>Sensibilización y divulgación cultura del agua.</strong>
+                      </summary>
+                      <hr style="background: #FFFFFF; height: 3px;">
+                        <p><strong class="underline">Descripción</strong>: 
+                          Gasto en educación y sensibilización.0/1/2
+                      </p>
+                        <p><strong class="underline">Fuentes de origen</strong>: 
+                          <a href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/" class="text-white underline" target="_blank">
+                            https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/
+                          </a>    
+                      </p>
+                        <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                        <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                        <p><Strong class="underline">Línea de base</Strong>: 0</p>
+                        <p><strong class="underline">Meta 2030</strong>: 2</p>
+                        <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
+                      </details>
                 </details>
                 </details>
               </div>
