--- a/templates/ods/ods-06/ods-06-legislativa.html
+++ b/templates/ods/ods-06/ods-06-legislativa.html
@@ -21,17 +21,17 @@
 </head>
 <body class="animate__animated animate__fadeInRight">
     <!-- Content -->    
-    <div class="panel-title title-div ods-6">
+    <div class="panel-title title-div">
 
          <!-- Navigation menu bar -->
-        <nav class="navbar">
-            <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
-            <div class="nav-menu">
-                <a href="#" class="text-right p-2 hover-underline-animation">ODS</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">EQUIPO</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">CONTACTO</a> 
-            </div>
-        </nav>
+         <nav class="navbar">
+          <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <div class="nav-menu">
+              <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
+              <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+              <a href="../../docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+          </div>
+      </nav>
         <!-- end of navigation menu bar -->
     
       <br>
@@ -44,8 +44,8 @@
             <p class="lead text-white">Garantizar la disponibilidad de agua y su gestión sostenible y el saneamiento para todos.</p>
             <p>
               <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
-              <a href="ods-06-control.html" class="btn btn-success my-2">Función Control</a>
-              <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-success my-2">Más info</a>
+              <a href="ods-06-control.html" class="btn btn-primary my-2">Función Control</a>
+              <a href="https://www.un.org/sustainabledevelopment/es/water-and-sanitation/" target="_blank" class="btn btn-primary my-2">Más info</a>
             </p>
           </div>
         </section>
@@ -74,20 +74,25 @@
                     <hr style="background: #FFFFFF; height: 3px;">
                     <details>
                       <summary><b class="text-white">INDICADORES</b></summary>
-                      <hr style="background: #FFFFFF; height: 3px;">
+                      <hr style="background: #FFFFFF; height: 6px;">
+                      <!-- Indicador 1 -->
                       <details>
-                        <summary><b>Potabilidad del agua de consumo</b></summary>
+                        <summary><strong>Potabilidad del agua de consumo.</strong>
+                        </summary>
                         <hr style="background: #FFFFFF; height: 3px;">
-                                                
-                              <p>Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.</p>
-                              <p>
-                                <a class="text-white underline" target="_blank" href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/">
-                                  Indicador número 5 de segumiento del Plan Integral de Gestión de Agua de uso Urbano (NILSA)
-                                </a>
-                              </p>
-                              <p>Anual</p>
-                              <p>Pregunta parlamentaria o petición de información.</p>
-                              <p><strong>Línea de base: </strong>7,70 %</p>
+                          <p><strong class="underline">Descripción</strong>: 
+                            Porcentaje de muestras de agua que incumple la normativa de potabilidad para aguas de consumo.
+                        </p>
+                          <p><strong class="underline">Fuentes de origen</strong>: 
+                            <a href="https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/" class="text-white underline" target="_blank">
+                              https://www.nilsa.com/es/que-hacemos/saneamiento-y-depuracion/plan-director-del-ciclo-integral-de-agua-de-uso-urbano/
+                            </a>    
+                        </p>
+                          <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
+                          <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
+                          <p><Strong class="underline">Línea de base</Strong>: 7,7 %</p>
+                          <p><strong class="underline">Meta 2030</strong>: 0 %</p>
+                          <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                         </details>
                     </details>
                   </details>
