--- a/templates/ods/ods-02/ods-02-legislativa.html
+++ b/templates/ods/ods-02/ods-02-legislativa.html
@@ -21,7 +21,7 @@
 
          <!-- Navigation menu bar -->
          <nav class="navbar">
-          <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
           <div class="nav-menu">
               <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
               <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
@@ -41,7 +41,6 @@
           <p>
             <a href="../../../index.html" class="btn btn-secondary my-2">Atrás</a>
             <a href="ods-02-control.html" class="btn btn-primary my-2">Control</a>
-            <a href="ods-02-economica.html" class="btn btn-primary my-2">Económica</a>
             <a href="https://www.un.org/sustainabledevelopment/es/hunger/" target="_blank" class="btn btn-primary my-2">Más info</a>
           </p>
         </div>
@@ -66,8 +65,9 @@
               <details>
                 <summary>
                     <strong>
-                        El Parlamento estará vigilante en la aprobación de los 
-                        Presupuestos Generales de Navarra contemplando una dotación presupuestaria suficiente y estable para el cumplimiento de los ODS.
+                      El parlamento promoverá la actualización del Decreto Foral 30/2019 que regula la Cartera de Servicios sociales 
+                      con una nueva Cartera que recoja recursos específicos, flexibles y adaptados a la 
+                      nueva realidad y necesidades de la población residente en Navarra. 
                     </strong>
                 </summary>
                 <hr style="background: #FFFFFF; height: 9px;">
@@ -76,7 +76,7 @@
                   <hr style="background: #FFFFFF; height: 6px;">
                   <!-- Indicador 1 -->
                   <details>
-                    <summary><strong>Informe económico</strong>
+                    <summary><strong>Nuevo Cartera de Servicios Sociales.</strong>
                     </summary>
                     <hr style="background: #FFFFFF; height: 3px;">
                       <p><strong class="underline">Descripción</strong>: 
@@ -125,39 +125,6 @@
                       <p><strong class="underline">Acciones de desarrollar</strong>: Moción.</p>
                       <p><Strong class="underline">Línea de base</Strong>: 0</p>
                       <p><strong class="underline">Meta 2030</strong>: 1</p>
-                      <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
-                    </details>
-                </details>
-              </details>
-              <hr style="background: #FFFFFF; height: 12px;">
-              <!-- Pacto 3 -->
-              <details>
-                <summary>
-                    <strong>
-                        El Parlamento de Navarra garantizará el cumplimiento de los porcentajes 
-                        incluidos en el III Plan Director de Cooperación de Gobierno de Navarra.
-                    </strong>
-                </summary>
-                <hr style="background: #FFFFFF; height: 9px;">
-                <details>
-                  <summary><strong class="text-white">INDICADORES</strong></summary>
-                  <hr style="background: #FFFFFF; height: 6px;">
-                  <!-- Indicador 1 -->
-                  <details>
-                    <summary><strong>Seguimiento.</strong></summary>
-                    <hr style="background: #FFFFFF; height: 3px;">
-                      <p><strong class="underline">Descripción</strong>: 
-                        Pregunta al Gobierno sobre el cumplimiento de los porcentajes.0/1/2
-                      </p>
-                      <p><strong class="underline">Fuentes de origen</strong>: 
-                        <a class="text-white underline" href="https://gobiernoabierto.navarra.es/sites/default/files/3285_anexo_iii_plan_director_de_la_cooperacion_navarra_.pdf">
-                            https://gobiernoabierto.navarra.es/sites/default/files/3285_anexo_iii_plan_director_de_la_cooperacion_navarra_.pdf
-                        </a>
-                      </p>
-                      <p><Strong class="underline">Periodicidad</Strong>: Anual.</p>
-                      <p><strong class="underline">Acciones de desarrollar</strong>: Pregunta parlamentaria o petición de información.</p>
-                      <p><Strong class="underline">Línea de base</Strong>: 0</p>
-                      <p><strong class="underline">Meta 2030</strong>: 2</p>
                       <p><strong class="underline">Organismo responsable</strong>: Grupos parlamentarios</p>
                     </details>
                 </details>
