--- a/templates/ods/ods-06/ods-06-control.html
+++ b/templates/ods/ods-06/ods-06-control.html
@@ -25,7 +25,7 @@
 
          <!-- Navigation menu bar -->
          <nav class="navbar">
-          <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+          <a href="../.../../../../index.html" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
           <div class="nav-menu">
               <a href="../../index.html#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
               <a href="../../grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
